--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".MainActivity"
+            android:name=".Activities.MainActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
@@ -20,9 +20,9 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".DiaryActivity"
+            android:name=".Activities.DiaryActivity"
             android:label="@string/title_activity_diary" />
-        <activity android:name=".CalcActivity" />
+        <activity android:name=".Activities.CalcActivity" />
         <activity
             android:name=".OverviewActivity"
             android:label="@string/title_activity_overview"
